log/build_2024-06-06_13-55-38/pkg_treinamento/stderr.log
  File "/home/uav_team/ROS2_curso/install/pkg_treinamento/lib/python3.10/site-packages/pkg_treinamento/calculatorserver.py", line 3
    import rclpy.node import Node
                      ^^^^^^
SyntaxError: invalid syntax

